WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198556
iPadOS: Google calendars new event picker moves and flickers in landscape with software keyboard
https://bugs.webkit.org/show_bug.cgi?id=198556
Summary
iPadOS: Google calendars new event picker moves and flickers in landscape wit...
Ryosuke Niwa
Reported
2019-06-04 22:28:15 PDT
It's really hard to create a new event using Google calendar on iPadOS without a hardware keyboard because tapping on date brings up software keyboard and erratically shifts up/down the new event dialog/pane. We need to pretend that these input elements have inputmode=none for now. <
rdar://problem/48006291
>
Attachments
Fixes the bug
(2.25 KB, patch)
2019-06-04 22:30 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-06-04 22:30:45 PDT
Created
attachment 371377
[details]
Fixes the bug
Wenson Hsieh
Comment 2
2019-06-04 22:32:01 PDT
Comment on
attachment 371377
[details]
Fixes the bug rs=me
Ryosuke Niwa
Comment 3
2019-06-04 23:09:26 PDT
Committed
r246099
: <
https://trac.webkit.org/changeset/246099
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug