Cherry-pick r246099. rdar://problem/48006291

iPadOS: Google calendars new event picker moves and flickers in landscape with software keyboard
    https://bugs.webkit.org/show_bug.cgi?id=198556

    Reviewed by Wenson Hsieh.

    Fix the issuse that it's really hard to create a new event using Google calendar on iPadOS with
    a software keyboard enabled because tapping on date brings up software keyboard and erratically
    shifts up/down the new event dialog/pane.

    Add a site specific quirk to pretend these input elements have inputmode=none for now.

    No new tests since this is a site specific quirk.

    * page/Quirks.cpp:
    (WebCore::Quirks::needsInputModeNoneImplicitly const):

    Canonical link: https://commits.webkit.org/212557@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246099 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/212437.12@safari-608.1.27-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.1.27-branch@246100 268f45cc-cd09-0410-ab3c-d52691b4dbfc